# hukamnama-screen

./: .example.hukamnama.nginx  .example.hukamnama.service  .example.systemd.conf  README.md  app.py  hukamnama-screen.ini  pyproject.toml
hukamnama/: __init__.py  auth.py  events.py  main.py  models.py
hukamnama/templates/: base.html  base_with_background.html  index.html  search.html  shabad.html
