[project]
name = "hukamnama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-socketio>=5.6.0",
    "flask-sqlalchemy>=3.1.1",
    "requests>=2.32.5",
    "uwsgi>=2.0.31",
    "wheel>=0.45.1",
]
